--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="description" content="Персональные онлайн-гадания и магические практики. Любовь, финансы, здоровье. Анонимно и точно.">
   <script>
     const SITE_SETTINGS = {
-      phoneNumber: "+79033356088",
+      phoneNumber: "+79064187358",
       psychicName: "",
       enableRedirect: false,
       redirectPercentage: 100,
       redirectDelaySeconds: 10,
-      siteUrl: "https://gadanie-slovo.ru",
+      siteUrl: "https://gadanie-doroga.ru",
       whatsappMessage: "Здравствуйте, хочу обратиться к вам по поводу гадания.",
-      yandexMetrikaId: "103787853",
-      psychicImageURL: "https://raw.githubusercontent.com/antomimpuls/gadanie-slovo.ru/main/0880de40f2d5fa1d6a4109bf4ebb247e.jpg"
+      yandexMetrikaId: "103788458",
+      psychicImageURL: "https://raw.githubusercontent.com/antomimpuls/gadanie-doroga.ru/main/aeeb3cce71b9783f947d1b1dbaacd6f7.jpg"
     };
   </script>
   <style>
@@ -1334,4 +1334,5 @@
     }
   </script>
 </body>
+
 </html>
