--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta name="description" content="Персональные онлайн-гадания и магические практики. Любовь, финансы, здоровье. Анонимно и точно.">
   <script>
     const SITE_SETTINGS = {
-      phoneNumber: "+79064187358",
-      psychicName: "",
-      enableRedirect: false,
-      redirectPercentage: 100,
-      redirectDelaySeconds: 10,
-      siteUrl: "https://gadanie-doroga.ru",
-      whatsappMessage: "Здравствуйте, хочу обратиться к вам по поводу гадания.",
-      yandexMetrikaId: "103788458",
-      psychicImageURL: "https://raw.githubusercontent.com/antomimpuls/gadanie-doroga.ru/main/aeeb3cce71b9783f947d1b1dbaacd6f7.jpg"
-    };
+  'phoneNumber': '+79952907331',
+  'psychicName': '',
+  'enableRedirect': false,
+  'redirectPercentage': 100,
+  'redirectDelaySeconds': 10,
+  'siteUrl': 'https://gadanie-doroga.ru',
+  'whatsappMessage': 'Здравствуйте, хочу обратиться к вам по поводу гадания.',
+  'yandexMetrikaId': '103788458',
+  'psychicImageURL': 'https://raw.githubusercontent.com/antomimpuls/gadanie-doroga.ru/main/aeeb3cce71b9783f947d1b1dbaacd6f7.jpg'
+};
   </script>
   <style>
     :root{
