Update settings via panel

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Персональные онлайн-гадания и магические практики. Любовь, финансы, здоровье. Анонимно и точно.">
   <script>
     const SITE_SETTINGS = {
-  'phoneNumber': '+79952907331',
+  'phoneNumber': '+79033356088',
   'psychicName': '',
-  'enableRedirect': true,
+  'enableRedirect': false,
   'redirectPercentage': 100,
   'redirectDelaySeconds': 0,
   'siteUrl': 'https://gadanie-doroga.ru/',
