--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     const SITE_SETTINGS = {
   'phoneNumber': '+79033356088',
   'psychicName': '',
-  'enableRedirect': false,
+  'enableRedirect': true,
   'redirectPercentage': 100,
   'redirectDelaySeconds': 0,
   'siteUrl': 'https://gadanie-doroga.ru/',
