Update settings via panel

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script>
 const SITE_SETTINGS = {
-  'phoneNumber': '+79275446408',
-  'psychicName': 'Оксана Васильевна',
+  'phoneNumber': '+37128949255',
+  'psychicName': 'Алёна Владимировна',
   'city': 'Москва (Пресненский район)',
   'address': 'г. Москва, Саввинская наб., д. 7, офис 14',
   'enableRedirect': false,
