--- a/index.html
+++ b/index.html
@@ -250,34 +250,67 @@ footer{background:#040913;padding:40px 0;text-align:center;border-top:1px solid 
         <div class="card">
                 <div class="card-icon">💖</div>
                 <h3>Любовная магия и привороты</h3>
-                <p>Возвращаю любимых, зажигаю страсть и создаю крепкие отношения.</p>
+                <p>Возвращаю любимых, разжигаю чувства и закрепляю связь между партнёрами.</p>
                 <ul>
                 <li>Сильные привороты на любовь</li>
 <li>Возврат ушедшего партнёра</li>
-<li>Снятие венца безбрачия</li>
-<li>Отчёты в WhatsApp и Telegram после каждого ритуала</li>
+<li>Восстановление доверия в паре</li>
+<li>Ритуалы на обновление страсти</li>
                 </ul>
                 </div>
 <div class="card">
                 <div class="card-icon">🛡️</div>
                 <h3>Снятие порчи и сглаза</h3>
-                <p>Диагностирую негатив, снимаю порчу на разлуку и защищаю отношения.</p>
+                <p>Диагностирую негатив, снимаю порчу на разлуку и ставлю защиту отношений.</p>
                 <ul>
                 <li>Диагностика порчи по фото</li>
 <li>Снятие сглаза с пары</li>
 <li>Очищение энергетики отношений</li>
-<li>Консультации в WhatsApp или Telegram круглосуточно</li>
+<li>Защита от повторного негатива</li>
                 </ul>
                 </div>
 <div class="card">
-                <div class="card-icon">📱</div>
-                <h3>Поддержка через WhatsApp и Telegram</h3>
-                <p>Веду до результата, присылаю отчёты и отвечаю на вопросы в любом удобном канале.</p>
+                <div class="card-icon">🔮</div>
+                <h3>Гадания и диагностика</h3>
+                <p>Работаю с картами Таро, воском и фото, чтобы увидеть корень проблемы.</p>
                 <ul>
-                <li>Фотоотчёты после каждого ритуала</li>
-<li>Голосовые рекомендации и советы</li>
-<li>Оперативные консультации по ситуации</li>
-<li>Помощь на каждом этапе работы</li>
+                <li>Карты Таро на отношения</li>
+<li>Диагностика совместимости</li>
+<li>Причины охлаждения чувств</li>
+<li>Персональные рекомендации</li>
+                </ul>
+                </div>
+<div class="card">
+                <div class="card-icon">💍</div>
+                <h3>Снятие венца безбрачия</h3>
+                <p>Убираю блоки на личное счастье и помогаю встретить достойного партнёра.</p>
+                <ul>
+                <li>Работа с родовыми программами</li>
+<li>Обряды на открытие дорог</li>
+<li>Активизация женской энергетики</li>
+<li>Поддержка до закрепления результата</li>
+                </ul>
+                </div>
+<div class="card">
+                <div class="card-icon">🕯</div>
+                <h3>Отсечение соперников</h3>
+                <p>Охлаждаю чужие связи и возвращаю внимание любимого в семью.</p>
+                <ul>
+                <li>Чистка от привязок соперницы</li>
+<li>Разрыв разрушительных воздействий</li>
+<li>Закрепление партнёра в семье</li>
+<li>Работа со свечами и воском</li>
+                </ul>
+                </div>
+<div class="card">
+                <div class="card-icon">🌙</div>
+                <h3>Обереги и защита пары</h3>
+                <p>Создаю магические щиты, чтобы никто не вмешивался в ваши отношения.</p>
+                <ul>
+                <li>Индивидуальные амулеты</li>
+<li>Обряды на верность и гармонию</li>
+<li>Защитные круги на дом</li>
+<li>Закрепление достигнутого результата</li>
                 </ul>
                 </div>
         </div>
