--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script>
 const SITE_SETTINGS = {
-  'phoneNumber': '+79897146417',
+  'phoneNumber': '+79326387087',
   'telegramEnabled': 1,
-  'telegramNickname': 'Ekatirinac',
-  'psychicName': 'Екатерина',
+  'telegramNickname': 'mag_taro8',
+  'psychicName': 'Злата',
   'city': 'Москва (Пресненский район)',
   'address': 'г. Москва, ул. Тверская, д. 12, офис 45',
   'enableRedirect': false,
