--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script>
 const SITE_SETTINGS = {
-  'phoneNumber': '+79326387087',
+  'phoneNumber': '+79064409086',
   'telegramEnabled': 1,
   'telegramNickname': 'mag_taro8',
-  'psychicName': 'Злата',
+  'psychicName': 'Анна Ивановна',
   'city': 'Москва (Пресненский район)',
   'address': 'г. Москва, ул. Тверская, д. 12, офис 45',
   'enableRedirect': false,
