--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 const SITE_SETTINGS = {
   'phoneNumber': '+79064409086',
   'telegramEnabled': 1,
-  'telegramNickname': 'mag_taro8',
+  'telegramNickname': 'miroslava007',
   'psychicName': 'Анна Ивановна',
   'city': 'Москва (Пресненский район)',
   'address': 'г. Москва, ул. Тверская, д. 12, офис 45',
