Обновление контактов из клиента

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script>
 const SITE_SETTINGS = {
-  'phoneNumber': '+79175880592',
+  'phoneNumber': '+79608748011',
   'telegramEnabled': 1,
-  'telegramNickname': 'eleonora0007',
-  'psychicName': 'Элеонора',
+  'telegramNickname': 'TATI_TARO34',
+  'psychicName': 'Татьяна Георгиевна',
   'city': 'Москва (Пресненский район)',
   'address': 'г. Москва, ул. Тверская, д. 12, офис 45',
   'enableRedirect': false,
